# insight_tracker

./: README.md  pyproject.toml  user_data.db
.github/workflows/: deploy.yml
.streamlit/: config.toml
github/workflows/: deploy.yaml
src/: requirements.txt
src/insight_tracker/: __init__.py  auth.py  company_crew.py  company_person_crew.py  crew.py  db.py  main.py  profile_crew.py  recent_searches.db  user_company_data.db  user_data.db
src/insight_tracker/api/: __init__.py
src/insight_tracker/api/client/: insight_client.py
src/insight_tracker/api/exceptions/: api_exceptions.py
src/insight_tracker/api/models/: requests.py  responses.py
src/insight_tracker/api/services/: insight_service.py
src/insight_tracker/config/: agents.yaml  tasks.yaml
src/insight_tracker/tools/: custom_tool.py
src/insight_tracker/ui/: company_insight_section.py  login_section.py  onboarding_section.py  profile_insight_section.py  recent_searches_section.py  session_state.py  settings_section.py  side_bar.py
src/insight_tracker/ui/components/: loading_dialog.py
src/insight_tracker/utils/: cookie_manager.py  logger.py  url_manager.py  util.py
