[tool.poetry]
name = "insight_tracker"
version = "0.1.0"
description = "insight_tracker using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
insight_tracker = "insight_tracker.main:run"
train = "insight_tracker.main:train"
replay = "insight_tracker.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
